--- a/src/pages/Quiz/quiz.css
+++ b/src/pages/Quiz/quiz.css
@@ -5,36 +5,42 @@
 body{
     background-color: white;
 }
-button{
-    border: none;
-    background-color: lightcoral;
-    border-radius: 0.5rem;
-    margin: 0.2rem;
-    padding: 0.2rem;
-    width: 500px;
-    
+.choice {
+        margin-left: 0.8rem;
+        background-color: white;
+        color: black;
+        border: 3px solid #4CAF50;
+        border-radius: 0.8rem;
+        transition-duration: 0.1s;
+      
 }
+.choice:hover {
+        background-color: #4CAF50; /* Green */
+        color: white;
+      
+  }
 button:hover{
     background-color: lightseagreen;
 }
 .submitanswer{
     border: none;
-    background-color: lightblue;
     border-radius: 0.5rem;
     margin-top: 1rem;
 
 }
 
 .submitanswer:hover{
-    background-color: lightgreen;
+    background-color: #4CAF50;
 }
 
 .question{
-    font-family: 'Courier New', Courier, monospace;
-    background-color: lightpink;
     padding: 1rem;
     text-align: center;
     border-radius: 0.5rem;
     width: max-content;
 
+}
+
+.editquestion{
+    margin: 10rem;
 }
