--- a/src/pages/login/login .css
+++ b/src/pages/login/login .css
@@ -1,2 +1,12 @@
-
-  
+h2,h5{
+    margin-left: 1%;
+}
+.content{
+    margin-left: 32rem;
+    
+}
+input{
+    border: none;
+    padding: 0.2rem;
+    background-color: whitesmoke;
+}
