--- a/src/pages/Quiz/quiz.css
+++ b/src/pages/Quiz/quiz.css
@@ -1,46 +1,52 @@
-*{
+* {
     margin: 0;
     padding: 0;
-}
-body{
-    background-color: white;
-}
-.choice {
-        margin-left: 0.8rem;
-        background-color: white;
-        color: black;
-        border: 3px solid #4CAF50;
-        border-radius: 0.8rem;
-        transition-duration: 0.1s;
-      
-}
-.choice:hover {
-        background-color: #4CAF50; /* Green */
-        color: white;
-      
   }
-button:hover{
+  body {
+    background-color: white;
+  }
+  .choice {
+    margin-left: 0.8rem;
+    background-color: white;
+    color: black;
+    border: 3px solid #4caf50;
+    border-radius: 0.8rem;
+    transition-duration: 0.1s;
+    padding: 0.5rem;
+  }
+  .selectedBtn {
+    margin-left: 0.8rem;
+    background-color: #4caf50;
+    color: white;
+    border: 3px solid white;
+    border-radius: 0.8rem;
+    padding: 0.5rem;
+  }
+  .choice:hover {
+    background-color: #4caf50;
+    color: white;
+    padding: 0.5rem;
+  }
+  button:hover {
     background-color: lightseagreen;
-}
-.submitanswer{
+  }
+  .submitanswer {
     border: none;
     border-radius: 0.5rem;
     margin-top: 1rem;
-
-}
-
-.submitanswer:hover{
-    background-color: #4CAF50;
-}
-
-.question{
+  }
+  
+  .submitanswer:hover {
+    background-color: #4caf50;
+  }
+  
+  .question {
     padding: 1rem;
     text-align: center;
     border-radius: 0.5rem;
     width: max-content;
-
-}
-
-.editquestion{
+  }
+  
+  .editquestion {
     margin: 10rem;
-}
+  }
