cards added to css

--- a/src/pages/login/login .css
+++ b/src/pages/login/login .css
@@ -2,8 +2,8 @@ h2,
 h5 {
   margin-left: 1%;
 }
-.content {
-  margin-left: 32rem;
+.content-login {
+  margin-left: 35rem;
 }
 input {
   border: none;
