--- a/src/pages/landing/home.css
+++ b/src/pages/landing/home.css
@@ -1,5 +1,14 @@
-.content{
-    margin-top: 70px ;
+.content {
+    display: flex;
+    gap: 30px;
+    justify-content: center;
+    margin-top: 70px;
     padding: 12px;
-    height: 3000px;
-}
+    flex-wrap: wrap;
+    margin-left: 0rem;
+  }
+  .title {
+    text-align: center;
+    color: black;
+  }
+  
